{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 17,
  "lineage": "ed06652d-060c-d5d8-155e-6adfdcdcef24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:291336071475:instance/i-0f1219a17f7e695cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1219a17f7e695cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JC-AWS2024-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02c1c95ac26f99758"
              }
            ],
            "primary_network_interface_id": "eni-02c1c95ac26f99758",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-34-205-48-145.compute-1.amazonaws.com",
            "public_ip": "34.205.48.145",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ae21b6d8ce871ff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a06cd63170652d1",
            "tags": {
              "Name": "WordPress EC2 Instance"
            },
            "tags_all": {
              "Name": "WordPress EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bccd6911efba40a0"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress_vpc",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:internet-gateway/igw-04df2bd700326a261",
            "id": "igw-04df2bd700326a261",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "tags": {
              "Name": "WordPress Internet Gateway"
            },
            "tags_all": {
              "Name": "WordPress Internet Gateway"
            },
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:route-table/rtb-08b9925b35d63b338",
            "id": "rtb-08b9925b35d63b338",
            "owner_id": "291336071475",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04df2bd700326a261",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WordPress Public Route Table"
            },
            "tags_all": {
              "Name": "WordPress Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04194362b9b504d41",
            "region": "us-east-1",
            "route_table_id": "rtb-08b9925b35d63b338",
            "subnet_id": "subnet-00a06cd63170652d1"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:security-group/sg-0bccd6911efba40a0",
            "description": "Security group for WordPress EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bccd6911efba40a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress_ec2_sg",
            "name_prefix": "",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:security-group/sg-09334b37dd9e59591",
            "description": "Security group for WordPress RDS instance",
            "egress": [],
            "id": "sg-09334b37dd9e59591",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bccd6911efba40a0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress_rds_sg",
            "name_prefix": "",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:subnet/subnet-0631a39a113652f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0631a39a113652f64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291336071475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "WordPress Private Subnet"
            },
            "tags_all": {
              "Name": "WordPress Private Subnet"
            },
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:subnet/subnet-00a06cd63170652d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a06cd63170652d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291336071475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "WordPress Public Subnet"
            },
            "tags_all": {
              "Name": "WordPress Public Subnet"
            },
            "vpc_id": "vpc-0d56b73ef69dfbe0d"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:vpc/vpc-0d56b73ef69dfbe0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0876ba65f58cfd1af",
            "default_route_table_id": "rtb-030d5d504e522598b",
            "default_security_group_id": "sg-046159d1981c067cd",
            "dhcp_options_id": "dopt-0e42f0ec867ee2c49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d56b73ef69dfbe0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030d5d504e522598b",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "tags": {
              "Name": "WordPress VPC"
            },
            "tags_all": {
              "Name": "WordPress VPC"
            }
          }
        }
      ]
    }
  ]
}